// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventTimestamp component renders correctly for a timestamp over a year 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#FFFFFF",
      "fontSize": 12,
    }
  }
>
  December 4, 2015
</Text>
`;

exports[`EventTimestamp component renders correctly for a timestamp within a week 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#FFFFFF",
      "fontSize": 12,
    }
  }
>
  August 4
</Text>
`;

exports[`EventTimestamp component renders correctly for a timestamp within a year 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#FFFFFF",
      "fontSize": 12,
    }
  }
>
  December 4
</Text>
`;
